# Solar3

./: Cargo.toml  GameOverview.txt  RoadmapChecklist.txt
docs/roadmaps/: controls.md  presentation.md  simulation.md
src/: input.rs  main.rs  quadtree.rs  sim.rs  ui.rs
src/domain/: mod.rs
src/domain/controls/: mod.rs
src/domain/presentation/: mod.rs
src/domain/presentation/panels/: banners.rs  diagnostics_panel.rs  game_over_panel.rs  help_panel.rs  mission_panel.rs  mod.rs  settings_panel.rs
src/domain/simulation/: mod.rs  quadtree.rs
