[package]
name = "solar2-rs"
version = "0.3.1"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_color",
    "bevy_state",
    "bevy_ui",
    "bevy_text",
    "png",
    "hdr",
    "default_font",
    "x11",
] }
bevy_egui = "0.30"
rand = "0.8"
